--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -13599,6 +13599,9 @@
         }
       }
     },
+    "Camera preview" : {
+
+    },
     "Camera switching" : {
       "localizations" : {
         "de" : {
