--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -13600,6 +13600,7 @@
       }
     },
     "Camera preview" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
