My servers setup stream wizard.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -11119,6 +11119,9 @@
         }
       }
     },
+    "Best possible stability. May use bonding." : {
+
+    },
     "Best possible stability. Uses bonding. Paid third-party service." : {
       "localizations" : {
         "de" : {
@@ -39019,6 +39022,9 @@
           }
         }
       }
+    },
+    "My server(s)" : {
+
     },
     "My source" : {
       "localizations" : {
