--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -11119,7 +11119,7 @@
         }
       }
     },
-    "Best possible stability. May use bonding." : {
+    "Best possible stability. May use bonding. Most flexible setup." : {
 
     },
     "Best possible stability. Uses bonding. Paid third-party service." : {
