Debug pixel format picker.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -43862,6 +43862,9 @@
         }
       }
     },
+    "Pixel format" : {
+
+    },
     "Pixellate" : {
       "localizations" : {
         "de" : {
