Use vision framework to find faces.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -11491,6 +11491,9 @@
         }
       }
     },
+    "Beauty filter" : {
+
+    },
     "BELABOX cloud" : {
       "localizations" : {
         "de" : {
