Recording description text field.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -20298,6 +20298,9 @@
         }
       }
     },
+    "Description" : {
+
+    },
     "Detect language per message" : {
       "localizations" : {
         "de" : {
