--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -41877,6 +41877,9 @@
         }
       }
     },
+    "No preview received yet." : {
+
+    },
     "No settings received yet." : {
       "localizations" : {
         "de" : {
@@ -45969,6 +45972,9 @@
           }
         }
       }
+    },
+    "Preview" : {
+
     },
     "Privacy policy" : {
       "localizations" : {
