Beauty filter continued.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -7768,6 +7768,9 @@
         }
       }
     },
+    "Adjust colors" : {
+
+    },
     "AfreecaTV" : {
       "localizations" : {
         "de" : {
