Beauty filter continued.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -16714,6 +16714,9 @@
         }
       }
     },
+    "Comic" : {
+
+    },
     "Configure it in Settings → Remote control" : {
       "localizations" : {
         "de" : {
