Beauty filter continued.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -25775,6 +25775,12 @@
         }
       }
     },
+    "Face landmarks" : {
+
+    },
+    "Face rectangle" : {
+
+    },
     "Facebook" : {
       "localizations" : {
         "de" : {
