Beauty filter continued.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -19693,6 +19693,18 @@
         }
       }
     },
+    "Cute" : {
+
+    },
+    "Cute offset" : {
+
+    },
+    "Cute radius" : {
+
+    },
+    "Cute scale" : {
+
+    },
     "Debug" : {
       "localizations" : {
         "de" : {
