Hide remote control assistant preview by tapping it.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -52348,6 +52348,9 @@
         }
       }
     },
+    "Show" : {
+
+    },
     "Show name" : {
       "localizations" : {
         "de" : {
@@ -58423,6 +58426,9 @@
           }
         }
       }
+    },
+    "Tap the preview to hide it." : {
+
     },
     "Tap to focus not supported for this camera" : {
       "localizations" : {
