Try to reconnect to twitch chat more often.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -21075,6 +21075,9 @@
         }
       }
     },
+    "Disconnected" : {
+
+    },
     "Discord" : {
       "localizations" : {
         "de" : {
