Update current focus and exposure when starting to observe them.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -26371,6 +26371,9 @@
         }
       }
     },
+    "EXB" : {
+
+    },
     "Experimental" : {
       "localizations" : {
         "de" : {
@@ -29225,6 +29228,9 @@
           }
         }
       }
+    },
+    "FOC" : {
+
     },
     "FOCUS" : {
 
