--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -71472,7 +71472,7 @@
         "sv" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "webbläsare"
+            "value" : "Webbläsare"
           }
         },
         "tr" : {
