Face filter continued.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -11615,6 +11615,9 @@
         }
       }
     },
+    "Beauty" : {
+
+    },
     "Beauty filter" : {
       "localizations" : {
         "de" : {
